[gd_scene load_steps=8 format=2]

[ext_resource path="res://audio/player_gun_shot.wav" type="AudioStream" id=1]
[ext_resource path="res://characters/player/gun_barrel_end.gd" type="Script" id=2]

[sub_resource type="VisualShaderNodeColorConstant" id=1]
constant = Color( 1, 0.904175, 0.386719, 1 )

[sub_resource type="VisualShader" id=2]
code = "shader_type spatial;



void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(1.000000, 0.904175, 0.386719);
	float n_out2p1 = 1.000000;

// Output:0
	EMISSION = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 0, 75 )
nodes/fragment/2/node = SubResource( 1 )
nodes/fragment/2/position = Vector2( 180, 200 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 5 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="CylinderMesh" id=4]
material = SubResource( 3 )
top_radius = 0.01
bottom_radius = 0.01
height = 1.0

[sub_resource type="Skin" id=5]

[node name="GunBarrelEnd" type="Spatial"]
visible = false
script = ExtResource( 2 )

[node name="BarrelLight" type="OmniLight" parent="."]
light_color = Color( 1, 0.678431, 0, 1 )
light_energy = 5.0
shadow_enabled = true
omni_range = 10.0

[node name="BulletRay" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, -0.5 )
mesh = SubResource( 4 )
skin = SubResource( 5 )
material/0 = null

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )
unit_db = 24.0

[node name="ShowTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.15
[connection signal="timeout" from="ShowTimer" to="." method="_on_ShowTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
